--- a/package.json
+++ b/package.json
@@ -224,6 +224,7 @@
     "@types/typescript": "^2.0.0",
     "eslint": "^8.13.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "jasmine": "^4.1.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
