--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kellywoldseth/https---github.com-kellywoldseth-imageAPI_Project1.git"
+    "url": "https://github.com/kellywoldseth/imageAPI"
   },
   "author": "Kelly Woldseth",
   "license": "ISC",
