--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^17.0.24",
     "@types/nodemon": "^1.19.1",
     "@types/prettier": "^2.6.0",
+    "@types/sharp": "^0.30.2",
     "@types/typescript": "^2.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.13.0",
