--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.3",
-    "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.30.3",
-    "supertest": "^6.2.2"
+    "sharp": "^0.30.3"
   },
   "devDependencies": {
     "@types/eslint": "^8.4.1",
@@ -26,8 +24,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jasmine": "^4.1.0",
     "jasmine-es6-promise-matchers": "^2.1.2",
+    "jasmine-spec-reporter": "^7.0.0",
     "nodemon": "^2.0.15",
     "prettier": "^2.6.2",
+    "supertest": "^6.2.3",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
